test/error/error.input93.zc
Expecting an integer literal value on line 1
